<resources>
    <string name="app_name">Vacovid</string>
    <string name="bienvendo">Bienvendo</string>
    <string name="ingresar">Ingresar</string>
    <string name="login">Login</string>
    <string name="nombre">Nombre</string>
    <string name="password">Password</string>
    <string name="documento">Documento</string>
    <string name="direccion">Direccion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="numero">Numero</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrate">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="iniciar">Iniciar sesión</string>
    <string-array name="roles">
        <item>Paciente</item>
        <item>Personal de salud</item>
    </string-array>
    <string-array name="ocupacion">
        <item>Salud de primera línea</item>
        <item>Salud</item>
        <item>Empleado</item>
        <item>Independiente</item>
        <item>Estudiante</item>
        <item>Fuerza pública</item>
        <item>Educador</item>
    </string-array>
    <string name="fechaInscripcion">Seleccione una fecha</string>
    <string name="fechaNacimiento">Seleccione una fecha</string>
    <string name="ocupacion">Ocupacion</string>
    <string name="fechanacimiento">Fecha de nacimiento</string>
    <string name="guardar">Guardar</string>
    <string name="horaInscripcion">Seleccione una hora</string>
    <string name="genero">Genero</string>
    <string name="generoH">Hombre</string>
    <string name="generoM">Mujer</string>

</resources>