<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Registro">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="35dp"
            android:elevation="4dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtRegistrarse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registrate"
                        android:textColor="@android:color/black"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="Registrarse" />

                </RelativeLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">


                    <EditText
                        android:id="@+id/etenombre"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">


                    <EditText
                        android:id="@+id/etecorreo"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etecontraseña"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:ems="10"
                        android:hint="@string/contrase_a"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etenumero"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:ems="10"
                        android:hint="@string/numero"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etedocumento"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:ems="10"
                        android:hint="@string/documento"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Spinner
                        android:id="@+id/roles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/roles" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:padding="20dp"
                    android:text="@string/registrarse"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:backgroundTint="#673AB7" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtsignin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="4dp"
                        android:text="@string/iniciar_sesi_n"
                        android:textColor="#673AB7"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>