<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:elevation="4dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        tools:targetApi="lollipop">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/iniciar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@android:color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="@string/iniciar_sesi_n" />

            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">


                <EditText
                    android:id="@+id/etedoc"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:hint="@string/documento"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/etcontraseña"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/roleslog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/roles" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ingresar"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:padding="20dp"
                app:backgroundTint="#673AB7" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtsignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/registrarse"
                    android:textColor="#FF673AB7"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>